--- a/src/views/pending.ejs
+++ b/src/views/pending.ejs
@@ -3,7 +3,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
+     <title>El proceso de pago se realizco correctamente, queda pendiente confirmacion de pago</title>
 </head>
 <body>
      <h1>El pago quedo pendiente a confirmar</h1>
