--- a/src/views/confirm.ejs
+++ b/src/views/confirm.ejs
@@ -10,6 +10,7 @@
         <a href="<%= global.init_point %>">
             Link
         </a>
+        <h1><%= payment_type %></h1>
     </div>
 </body>
 </html>
