--- a/src/views/success.ejs
+++ b/src/views/success.ejs
@@ -7,5 +7,8 @@
 </head>
 <body>
      <h1>El pago fue procesado exitosamente !</h1>
+     <p>Tipo de pago <%= payment_type %></p>
+     <p>Preferencia externa <%= external_reference %></p>
+     <p>Id de pago <%= collection_id %></p>
 </body>
 </html>
