--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -57,5 +57,6 @@
 	<%- include('partials/footer') %>
 	<!-- /footer -->
 
-</body>	
+</body>
+<script src="https://www.mercadopago.com/v2/security.js" view="detail"></script>
 </html>
