--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -115,5 +115,6 @@
   <%- include('partials/footer') %>
   <!-- /footer -->
 </body>
+<script src="https://www.mercadopago.com/v2/security.js" view="index"></script>
 
 </html>
