--- a/src/views/pending.ejs
+++ b/src/views/pending.ejs
@@ -8,4 +8,5 @@
 <body>
      <h1>El pago quedo pendiente a confirmar</h1>
 </body>
+<script src="https://www.mercadopago.com/v2/security.js" view="pending"></script>
 </html>
