--- a/src/views/success.ejs
+++ b/src/views/success.ejs
@@ -11,4 +11,5 @@
      <p>Preferencia externa <%= external_reference %></p>
      <p>Id de pago <%= collection_id %></p>
 </body>
+<script src="https://www.mercadopago.com/v2/security.js" view="success"></script>
 </html>
